k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yomu-service
  labels:
    app: yomu-forum
spec:
  type: ClusterIP
  selector:
    app: yomu-forum
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
